# Mafia-Word2vec-

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: api-tests.yml  ci.yml  model-training-test.yml
analyze/: visualize_pca.py
app/: fastapi_app.py  streamlit_app.py
data/: models.dvc  processed.dvc  raw.dvc
notebooks/: data_preprocessing.ipynb  model_training.ipynb
src/: config.py  preprocess.py  train.py
